2002-02-18  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c: 	Finished rewrite of conf-parser. 
			(Almost) identical routines are now 
			used for command-line and conf-file.
			Further information is given in case
			of wrong options.
			Cleanup of code (partially), blow-up
			on some other areas (especially the
			conf-var has to be cleaned up now...)
			Well, ongoing progress, short of
			release 0.8.8 (testing).
			OpenOnce defaults ot On now (to avoid
			memory fragmentation and usb-messages
			in syslog). Use Off only if you need
			to access the device inbetween vgrabbj
			taking frames.

2002-02-16  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Further rewrite of conf-parser (not
			finished - sigh)
			Definitions of options and certain
			detailed definitones moved to structs
			(former: in code)
			Timestamp string does not need to be in
			paranthesis (conf-file) any more (but
			can - it will be filtered!)

2002-02-12  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c: 	Changed handling of open-device in case
			of openonce (it is really opened only once
			now), avoiding lot's of kernel-uhci-msgs
			on my box. Hope you guys benefit, too.
			Again, I strongly recommend to use OpenOnce

2002-02-11  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c: 	More split-up of source to make it more
			readable. Re-organization of mmap (now
			close to device open to prevent memory
			fragmentation. If the device is not
			otherwise needed, I strongly advise to 
			use OpenOnce yes (now default).
			Changed handling of Timestamp, Font-eninge
			is loaded/initialized once only at startup
			and if config is re-read.

2002-02-10  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Added DaemonSeconds as alternative to Daemon
			in conf - value given is taken as seconds
			instead of milliseconds (see conf).

	* vgrabbj.c: 	Added some exit routine to mmap'ed capture
			to avoid endless loops (2).

2002-02-09  Jens Gecius  <jens@gecius.de>
